force-app/main/default/objects/Disclosure_Workflow__c/Disclosure_Workflow__c.object-meta.xml
<CustomObject>
    <label>Disclosure Workflow</label>
    <pluralLabel>Disclosure Workflows</pluralLabel>
    <nameField>
        <displayFormat>DW-{0000}</displayFormat>
        <label>Workflow Number</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>