force-app/main/default/objects/Disclosure_Workflow__c/fields/Amendment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Reason__c</fullName>
    <label>Amendment Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>