force-app/main/default/objects/Disclosure_Workflow__c/fields/EDGAR_Filing_Number__c.field-meta.xml
<CustomField>
    <fullName>EDGAR_Filing_Number__c</fullName>
    <label>EDGAR Filing Number</label>
    <length>50</length>
    <type>Text</type>
    <externalId>true</externalId>
</CustomField>