force-app/main/default/objects/Disclosure_Workflow__c/fields/Filed_By__c.field-meta.xml
<CustomField>
    <fullName>Filed_By__c</fullName>
    <label>Filed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Filed_Disclosures</relationshipName>
</CustomField>