force-app/main/default/objects/Disclosure_Workflow__c/fields/Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>Filing_Date__c</fullName>
    <label>Filing Date</label>
    <type>DateTime</type>
</CustomField>