force-app/main/default/objects/Disclosure_Workflow__c/fields/Materiality_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Materiality_Assessment__c</fullName>
    <label>Materiality Assessment</label>
    <type>MasterDetail</type>
    <referenceTo>Materiality_Assessment__c</referenceTo>
    <relationshipName>Disclosure_Workflows</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>