force-app/main/default/objects/Disclosure_Workflow__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Drafting</fullName><default>false</default><label>Drafting</label></value>
            <value><fullName>Legal_Review</fullName><default>false</default><label>Legal Review</label></value>
            <value><fullName>CFO_Review</fullName><default>false</default><label>CFO Review</label></value>
            <value><fullName>CEO_Approval</fullName><default>false</default><label>CEO Approval</label></value>
            <value><fullName>Board_Review</fullName><default>false</default><label>Board Review</label></value>
            <value><fullName>Ready_To_File</fullName><default>false</default><label>Ready To File</label></value>
            <value><fullName>Filed</fullName><default>false</default><label>Filed</label></value>
            <value><fullName>Amended</fullName><default>false</default><label>Amended</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>